# Fable.Giraffe

./: .editorconfig  .gitignore  Build.fs  Build.fsproj  CLAUDE.md  FABLE_V5_BUGS.md  Fable.Giraffe.sln  Justfile  README.md  RELEASING.md  pyproject.toml  rebar.config
.config/: dotnet-tools.json
.github/workflows/: build-and-test.yml  publish.yml
app/: Program.fs  Program.fsproj
app/beam/: Program.fs  Program.fsproj  rebar.config
app/beam/src/: giraffe_app.app.src
app/public/: index.html
src/: Core.fs  Fable.Giraffe.fsproj  FormatExpressions.fs  Helpers.fs  HttpContext.fs  HttpHandler.fs  HttpStatusCodeHandlers.fs  Json.fs  Middleware.fs  Negotiation.fs  Remoting.fs  Routing.fs  ShortGuid.fs  WebHost.fs
src/beam/: CowboyReq.fs  Fable.Giraffe.Beam.fsproj  HttpContext.fs  Json.fs  Middleware.fs  PlatformHelpers.fs  WebHost.fs
src/python/: Fable.Giraffe.Python.fsproj  HttpContext.fs  Middleware.fs  PlatformHelpers.fs  Remoting.fs  StaticFiles.fs  WebHost.fs
test/: Fable.Giraffe.Tests.fsproj  Helpers.fs  TestHttpHandler.fs  TestRemoting.fs  TestRouting.fs  Util.fs
