
[tool.poetry]
name = "giraffe"
version = "0.1.0"
description = "Fable Giraffe"
authors = ["Dag Brattli <dag@brattli.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
structlog = "^23.2.0"
starlette = "^0.31.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
