
[tool.poetry]
name = "giraffe"
version = "0.2.1"
description = "Fable Giraffe"
authors = ["Dag Brattli <dag@brattli.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
structlog = "^24.4.0"
starlette = "^0.38.5"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
