[project]
name = "giraffe"
version = "0.2.1"
description = "Fable Giraffe"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">=3.12,<4.0"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fable-library==5.0.0rc3",
    "structlog>=24.4.0,<25",
    "starlette>=1.0.0,<2",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "uvicorn>=0.30.6,<0.31",
    "pyinstrument>=4.3.0,<5",
]

[tool.uv]
package = false
